--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -8,23 +8,35 @@
  .social {
    display: flex;
    gap: 10px;
-   flex: 1;
  }
 
  .logo {
-   flex: 1;
    text-align: center;
    font-size: 36px;
    font-weight: bold;
-   /*color: white;*/
+   justify-content: flex-start;
+ }
+
+ .toggle {
+  display: flex;
+  gap: 10px;
+  align-items: center;
  }
 
  .links {
    display: flex;
-   gap: 20px;
+   padding-left: 40px;
+   gap: 40px;
    align-items: center;
    flex: 2;
    font-size: 20px;
+   font-weight: bold;
+ }
+
+ .auth {
+  display: flex;
+  gap: 20px;
+  align-items: center;
  }
 
  @media screen and (max-width:1280px) {
@@ -52,9 +64,12 @@
   }
  }
 
- @media screen and (max-width:640px) {
+ @media screen and (max-width:1024px) {
   .links {
     justify-content: flex-end;
+  }
+  .cat {
+    display: none;
   }
   .link {
     display: none;
