--- a/src/app/components/Pagination/pagination.module.css
+++ b/src/app/components/Pagination/pagination.module.css
@@ -1,18 +1,32 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .button {
-    width: 100px;
-    border: none;
-    padding: 16px;
-    background-color: var(--softBg);
-    color: var(--textColor);
-    cursor: pointer;
-  }
-  
-  .button:disabled{
-    background-color: var(--softBg);
-    cursor: not-allowed;
-  }
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  width: 100px;
+  border: none;
+  padding: 16px;
+  background-color: var(--softBg);
+  color: var(--textColor);
+  cursor: pointer;
+}
+
+.button:disabled {
+  background-color: var(--softBg);
+  cursor: not-allowed;
+}
+
+.pageNumber {
+  padding: 8px;
+  margin-right: 4px;
+  cursor: pointer;
+}
+
+.activePage {
+  font-weight: bold;
+}
+
+.ellipsis {
+  margin-right: 4px;
+}
