Menu e Footer Layout Fix

--- a/src/app/blog/blogPage.module.css
+++ b/src/app/blog/blogPage.module.css
@@ -3,7 +3,7 @@
     color: var(--bg);
     padding: 5px 10px;
     text-align: center;
-    text-transform: capitalize;
+    text-transform: uppercase;
   }
   
   .content{
