--- a/src/app/components/menuPosts/menuPosts.module.css
+++ b/src/app/components/menuPosts/menuPosts.module.css
@@ -37,30 +37,7 @@
     font-size: 12px;
     color: white;
     width: max-content;
-  }
-  
-  .category.travel {
-    background-color: #ff7857;
-  }
-  
-  .culture {
-    background-color: #ffb14f;
-  }
-  
-  .food {
-    background-color: #7fb881;
-  }
-  
-  .fashion {
-    background-color: #ff7887;
-  }
-  
-  .coding {
-    background-color: #775aec;
-  }
-  
-  .style {
-    background-color: #789cff;
+    color: var(--bg);
   }
   
   .postTitle {
