--- a/src/app/components/CategoryList/categoryList.module.css
+++ b/src/app/components/CategoryList/categoryList.module.css
@@ -18,30 +18,8 @@
   height: 80px;
   justify-content: center;
   border-radius: 10px;
-}
-
-.category.style {
-  background-color: #57c4ff31;
-}
-
-.category.fashion {
-  background-color: #da85c731;
-}
-
-.category.food {
-  background-color: #7fb88133;
-}
-
-.category.travel {
-  background-color: #ff795736;
-}
-
-.category.culture {
-  background-color: #ffb04f45;
-}
-
-.category.coding {
-  background-color: #5e4fff31;
+  background-color: var(--textColor);
+  color: var(--bg);
 }
 
 .image {
