--- a/src/app/components/Footer/footer.module.css
+++ b/src/app/components/Footer/footer.module.css
@@ -15,6 +15,7 @@
   }
   
   .logo {
+    margin-top: 50px;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -32,18 +33,34 @@
     margin-top: 10px;
     display: flex;
     gap: 10px;
+    align-items: center;
   }
   
   .links {
     flex: 1;
     display: flex;
-    justify-content: flex-end;
-    gap: 100px;
+    justify-content: flex-start;
+    gap: 10px;
+  }
+
+  .links2 {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
   }
   
   .list {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    font-weight: 300;
+  }
+  
+  .list2 {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
     gap: 10px;
     font-weight: 300;
   }
@@ -56,6 +73,9 @@
     .links {
       gap: 50px;
     }
+    .links2 {
+      gap: 50px;
+    }
   }
   @media screen and (max-width: 768px) {
     .container {
@@ -64,12 +84,15 @@
     }
   
     .links {
-      width: 100%;
       justify-content: space-between;
     }
+
   }
   @media screen and (max-width: 640px) {
     .links {
+      font-size: 14px;
+    }
+    .links2 {
       font-size: 14px;
     }
   }
