--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -25,10 +25,10 @@
 
  .links {
    display: flex;
-   padding-left: 40px;
+   padding-left: 2rem;
    gap: 40px;
    align-items: center;
-   flex: 2;
+   flex: 1;
    font-size: 20px;
    font-weight: bold;
  }
@@ -55,6 +55,7 @@
   }
   .logo {
     text-align: left;
+    padding-left: 0;
   }
  }
 
@@ -66,7 +67,8 @@
 
  @media screen and (max-width:1024px) {
   .links {
-    justify-content: flex-end;
+    justify-content: flex-start;
+    
   }
   .cat {
     display: none;
