--- a/src/app/components/Pagination/pagination.module.css
+++ b/src/app/components/Pagination/pagination.module.css
@@ -23,6 +23,13 @@
   cursor: pointer;
 }
 
+@media screen and (max-width:1024px) {
+  .pageNumber {
+    align-items: center;
+    padding: 2px;
+  }
+ }
+
 .activePage {
   font-weight: bold;
 }
