--- a/src/app/auth/forgotPassword/forgotPassword.module.css
+++ b/src/app/auth/forgotPassword/forgotPassword.module.css
@@ -1,3 +1,9 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .form {
     display: flex;
     flex-direction: column;
@@ -5,52 +11,36 @@
     max-width: 100%; /* Set a maximum width for the form */
   }
 
+  .desc {
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo {
+    color: black;
+    flex: 1;
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    justify-content: flex-start;
+  }
+
   .wrapper {
-    background-color: transparent;
+    background-color: #d9d9d9;
+    width: 50rem;
+    padding: 100px 150px;
+    margin-top: 30px;
+    box-shadow: 0px 0px 20px var(--text-color);
     display: flex;
     flex-direction: column;
-    width: max-content;
-    gap: 10px;
+    gap: 15px;
     border-radius: 10px;
   }
 
-  .socialButton1 {
+  .socialButton {
     background-color: black;
-    padding: 20px;
-    border-radius: 5px;
-    color: #ffff;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .altlog{
-    color: var(--bg);
-    box-shadow: 0px 0px 20px var(--text-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .socialButton2 {
-    background-color: #ff5555;
-    padding: 20px;
-    border-radius: 5px;
-    color: #ffff;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-  }
-  
-  .socialButton3 {
-    background-color: #087bea;
     padding: 20px;
     border-radius: 5px;
     color: #ffff;
@@ -92,5 +82,9 @@
       font-weight: 400;
       font-size: 14px;
     }
+
+    .wrapper {
+        padding: 30px;
+      }
   }
 
