--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ a {
   --bg: #0b0b0b;
   --textColor: #fff;
   background-color: var(--bg);
-  --softBg: #1f273a;
+  --softBg: #171718;
   --softTextColor: #a6a6a6;
   --iconColor: rgb(198, 198, 198);
   --linear-gradient: linear-gradient(180deg, #3c3c3c00, #00000080, #0b0b0b);
