--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -1,52 +1,63 @@
+.title {
+  font-size: 1.25rem;
+}
+
 .container {
-    margin-bottom: 50px;
-    display: flex;
-    align-items: center;
-    gap: 50px;
-  }
-  
-  .imageContainer {
-    flex: 1;
-    height: 350px;
-    position: relative;
-  }
-  
-  .image {
-    object-fit: cover;
-  }
-  
-  .textContainer {
-    flex: 1;
-    display: flex;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.imageContainer {
+  width: 300px;
+  height: 200px;
+  position: relative;
+}
+
+.image {
+  object-fit: cover;
+  filter: grayscale();
+}
+
+.container:hover .image {
+  filter: none;
+}
+
+.textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.date {
+  font-size: 0.75rem;
+  font-weight: bold;
+  color: var(--softTextColor);
+}
+
+.category {
+  font-weight: bold;
+  z-index: 300;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  color: var(--softTextColor);
+}
+
+.desc {
+  font-size: 1rem;
+  font-weight: 300;
+  color: var(--softTextColor);
+}
+
+@media screen and (max-width: 425px) {
+  .container {
     flex-direction: column;
-    gap: 30px;
   }
-  
-  .date {
-    color: gray;
+
+  .imageContainer {
+    width: 100%;
   }
-  
-  .category {
-    color: crimson;
-    font-weight: 500;
-    z-index: 300;
-    text-transform: uppercase;
-  }
-  
-  .desc {
-    font-size: 18px;
-    font-weight: 300;
-    color: var(--softTextColor);
-  }
-  
-  .link {
-    border-bottom: 1px solid crimson;
-    width: max-content;
-    padding: 2px 0px;
-  }
-  
-  @media screen and (max-width: 1280px) {
-    .imageContainer {
-      display: none;
-    }
-  }
+}
