--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -1,4 +1,3 @@
-
 .container {
   height: 100px;
   width: 100%;
@@ -80,10 +79,16 @@
 @media screen and (max-width: 768px) {
   .logo {
     font-size: 24px;
-    margin-left: -40px;
   }
   .toggle {
-    padding-right: 2rem;
+    padding-right: 1rem;
+  }
+  .wrapper {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .links {
+    padding-left: 0;
   }
 }
 
