--- a/src/app/components/Post/postPage.module.css
+++ b/src/app/components/Post/postPage.module.css
@@ -1,52 +1,64 @@
+.title {
+  font-size: 1.25rem;
+}
+
 .container {
   margin-bottom: 50px;
   display: flex;
+  width: 100%;
   align-items: center;
-  gap: 50px;
+  flex-direction: row;
+  gap: 24px;
 }
 
 .imageContainer {
-  flex: 1;
-  height: 350px;
+  width: 300px;
+  height: 170px;
   position: relative;
 }
 
 .image {
   object-fit: cover;
+  filter: grayscale();
+}
+
+.container:hover .image {
+  filter: none;
 }
 
 .textContainer {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 8px;
 }
 
 .date {
-  color: gray;
+  font-size: 0.75rem;
+  font-weight: bold;
+  color: var(--softTextColor);
 }
 
 .category {
-  color: crimson;
-  font-weight: 500;
+  font-weight: bold;
   z-index: 300;
   text-transform: uppercase;
+  font-size: 0.75rem;
+  color: var(--softTextColor);
 }
 
 .desc {
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 300;
   color: var(--softTextColor);
 }
 
-.link {
-  border-bottom: 1px solid crimson;
-  width: max-content;
-  padding: 2px 0px;
-}
+@media screen and (max-width: 425px) {
+  .container {
+    flex-direction: column;
+  }
 
-@media screen and (max-width: 1280px) {
   .imageContainer {
-    display: none;
+    width: 100%;
   }
 }
