--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -1,95 +1,111 @@
 .infoContainer {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-  }
-  
-  .textContainer {
-    flex: 1;
-  }
-  
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.textContainer {
+  flex: 1;
+}
+
+.title {
+  font-size: 30px;
+  margin-bottom: 32px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.userImageContainer {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+
+.avatar {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.userTextContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  color: var(--softTextColor);
+  margin-bottom: 24px;
+}
+
+.username {
+  margin-bottom: 8px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.imageContainer {
+  flex: 1;
+  width: 100%;
+  aspect-ratio: 16/9;
+  position: relative;
+}
+
+.image {
+  object-fit: cover;
+}
+
+.content {
+  display: flex;
+  gap: 50px;
+}
+
+.post {
+  flex: 5;
+  margin-top: 60px;
+}
+
+.description p {
+  font-size: 20px;
+  line-height: 180%;
+  font-weight: 300;
+  margin-top: 20px;
+}
+
+.description p > img {
+  width: 100%;
+}
+
+.description p > a {
+  text-decoration: underline;
+}
+
+.description ul {
+  padding-left: 20px;
+}
+
+.description ol {
+  padding-left: 20px;
+}
+
+@media screen and (max-width: 1536px) {
   .title {
-    font-size: 64px;
-    margin-bottom: 50px;
+    font-size: 30px;
   }
-  
-  .user {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+}
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 24px;
+    margin-bottom: 24px;
   }
-  
-  .userImageContainer {
-    width: 50px;
-    height: 50px;
-    position: relative;
-  }
-  
-  .avatar {
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .userTextContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    color: var(--softTextColor);
-  }
-  
-  .username {
-    margin-top: 20px;
-    font-size: 20px;
-    font-weight: 500;
-  }
-  
-  .imageContainer {
-    flex: 1;
-    height: 450px;
-    position: relative;
-  }
-  
-  .image {
-    object-fit: cover;
-  }
-  
-  .content {
-    display: flex;
-    gap: 50px;
-  }
-  
-  .post {
-    flex: 5;
-    margin-top: 60px;
-  }
-  
+
   .description p {
-    font-size: 20px;
-    font-weight: 300;
-    margin-top: 20px;
+    font-size: 18px;
   }
-  
-  @media screen and (max-width: 1536px) {
-    .title {
-      font-size: 54px;
-    }
+
+  .username {
+    margin-bottom: 4px;
+    font-size: 14px;
+    font-weight: bold;
   }
-  @media screen and (max-width: 1280px) {
-    .title {
-      font-size: 48px;
-    }
-  }
-  @media screen and (max-width: 1024px) {
-    .imageContainer {
-      display: none;
-    }
-  }
-  @media screen and (max-width: 640px) {
-    .title {
-      font-size: 36px;
-    }
-  
-    .description p{
-      font-size: 18px;
-    }
-  }
+}
