--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -1,62 +1,64 @@
 .container {
-    flex: 5;
-  }
-  
-  .imageContainer {
-    flex: 1;
-    height: 350px;
-    position: relative;
-  }
-  
-  .image {
-    object-fit: cover;
-  }
-  
-  .textContainer {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-  }
-  
-  .date {
-    color: gray;
-  }
-  
-  .category {
-    color: crimson;
-    font-weight: 500;
-    z-index: 300;
-    text-transform: uppercase;
-  }
-  
-  .desc {
-    font-size: 18px;
-    font-weight: 300;
-    color: var(--softTextColor);
-  }
-  
-  .link {
-    border-bottom: 1px solid crimson;
-    width: max-content;
-    padding: 2px 0px;
-  }
+  flex: 5;
+}
 
-  .title{
-    background-color: var(--textColor);
-    color: var(--bg);
-    padding: 5px 10px;
-    text-align: center;
-    text-transform: uppercase;
+.imageContainer {
+  flex: 1;
+  height: 350px;
+  position: relative;
+}
+
+.image {
+  object-fit: cover;
+}
+
+.textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.date {
+  color: gray;
+}
+
+.category {
+  color: crimson;
+  font-weight: 500;
+  z-index: 300;
+  text-transform: uppercase;
+}
+
+.desc {
+  font-size: 18px;
+  font-weight: 300;
+  color: var(--softTextColor);
+}
+
+.link {
+  border-bottom: 1px solid crimson;
+  width: max-content;
+  padding: 2px 0px;
+}
+
+.title {
+  color: var(--TextColor);
+  padding: 5px 10px;
+  text-align: center;
+  text-transform: uppercase;
+
+  margin-top: 64px;
+  margin-bottom: 54px;
+}
+
+.content {
+  display: flex;
+  gap: 50px;
+}
+
+@media screen and (max-width: 1280px) {
+  .imageContainer {
+    display: none;
   }
-  
-  .content{
-    display: flex;
-    gap: 50px;
-  }
-  
-  @media screen and (max-width: 1280px) {
-    .imageContainer {
-      display: none;
-    }
-  }
+}
