--- a/src/app/auth/login/loginPage.module.css
+++ b/src/app/auth/login/loginPage.module.css
@@ -39,7 +39,7 @@
 }
 
 .logo {
-  color: black;
+  color: var(--bg);
   flex: 1;
   text-align: center;
   font-size: 36px;
@@ -48,7 +48,7 @@
 }
 
 .desc {
-  color: black;
+  color: var(--bg);
   margin-bottom: 20px;
   text-align: center;
 }
