--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -2,6 +2,10 @@
   font-size: 1.25rem;
 }
 
+.title::first-letter {
+  text-transform: capitalize;
+}
+
 .container {
   margin-bottom: 50px;
   display: flex;
@@ -30,6 +34,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  width: 100%;
 }
 
 .date {
@@ -52,7 +57,7 @@
   color: var(--softTextColor);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 640px) {
   .container {
     flex-direction: column;
   }
