--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -2,6 +2,7 @@
   height: 100px;
   width: 100%;
   z-index: 10;
+  position: static;
 }
 
 .wrapper {
@@ -43,7 +44,7 @@
   gap: 40px;
   align-items: center;
   flex: 1;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -58,7 +59,6 @@
     font-size: 32px;
   }
   .links {
-    font-size: 18px;
     gap: 15px;
   }
   .search {
