--- a/src/app/components/authLinks/authLinks.module.css
+++ b/src/app/components/authLinks/authLinks.module.css
@@ -1,70 +1,70 @@
 .link {
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.burger {
+  width: 20px;
+  height: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  display: none;
+}
+
+.button1 {
+  padding: 10px 20px;
+  border: none;
+  background-color: transparent;
+  color: var(--textColor);
+  cursor: pointer;
+}
+
+.button2 {
+  padding: 10px 20px;
+  border: none;
+  background-color: var(--textColor);
+  color: var(--bg);
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.line {
+  width: 100%;
+  height: 2px;
+  background-color: var(--textColor);
+}
+
+.responsiveMenu {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
   .burger {
-    width: 20px;
-    height: 16px;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
+    display: flex;
+  }
+  .button1,
+  .button2 {
     display: none;
   }
-
-  .button1 {
-    padding: 10px 20px;
-    border: none;
-    background-color: var(--softBg);
-    color: var(--textColor);
-    cursor: pointer;
-    border-radius: 10px;
-  }
-
-  .button2 {
-    padding: 10px 20px;
-    border: none;
-    background-color: var(--textColor);
-    color:  var(--bg);
-    cursor: pointer;
-    border-radius: 10px;
-  }
-
-  .line {
-    width: 100%;
-    height: 2px;
-    background-color: var(--textColor);
+  .link {
+    display: none;
   }
 
   .responsiveMenu {
-    display: none;
+    position: absolute !important;
+    top: 100px !important;
+    left: 0 !important;
+    background-color: var(--bg);
+    backdrop-filter: blur(10px);
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    font-size: 36px;
+    z-index: 100000 !important;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .burger {
-      display: flex;
-    }
-    .button1, .button2 {
-      display: none;
-    }
-    .link{
-      display: none;
-    }
-
-    .responsiveMenu{
-        position: absolute;
-        top: 100px;
-        left: 0;
-        background-color: var(--bg);
-        backdrop-filter: blur(10px);
-        height: calc(100vh - 100px);
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-        font-size: 36px;
-        z-index: 999;
-      }
-  }
+}
