--- a/src/app/write/writePage.module.css
+++ b/src/app/write/writePage.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  z-index: -100;
+  z-index: 100;
 }
 
 .category-wrapper {
@@ -56,7 +56,7 @@
   gap: 20px;
   background-color: var(--bg);
   width: 100%;
-  z-index: -100;
+  z-index: 100;
 }
 
 .input {
@@ -65,9 +65,11 @@
   font-size: 64px;
   border: none;
   outline: none;
+  width: 100% !important;
   background-color: var(--softBg);
   color: var(--textColor);
-  z-index: -100;
+  overflow: hidden;
+  resize: none;
 }
 
 .input::placeholder {
