--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -1,4 +1,9 @@
 .content {
-    display: flex;
-    gap: 50px;
+  display: flex;
+  gap: 32px;
+}
+
+.index {
+  position: relative;
+  z-index: -1;
 }
