--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -1,8 +1,14 @@
-.container {
+.parent {
   height: 100px;
   width: 100%;
+}
+
+.container {
+  width: 100%;
   z-index: 10;
-  position: static;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
 .wrapper {
@@ -11,7 +17,7 @@
   justify-content: space-between;
   height: 100px;
   width: 100%;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(25px);
   position: absolute;
   top: 0;
   left: 0;
