--- a/src/app/components/authLinks/authLinks.module.css
+++ b/src/app/components/authLinks/authLinks.module.css
@@ -52,11 +52,11 @@
   }
 
   .responsiveMenu {
-    position: absolute !important;
-    top: 100px !important;
-    left: 0 !important;
-    background-color: var(--bg);
-    backdrop-filter: blur(10px);
+    position: fixed;
+    top: 100px;
+    left: 0;
+    right: 0;
+    background-color: var(--bg) !important;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -65,6 +65,5 @@
     justify-content: center;
     gap: 50px;
     font-size: 36px;
-    z-index: 100000 !important;
   }
 }
