--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -27,6 +27,7 @@
   width: 50px;
   height: 50px;
   position: relative;
+  z-index: -1;
 }
 
 .avatar {
@@ -59,6 +60,7 @@
   width: 100%;
   aspect-ratio: 16/9;
   position: relative;
+  z-index: -1;
 }
 
 .image {
