--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -7,16 +7,17 @@
 }
 
 .container {
-  margin-bottom: 50px;
+  margin-bottom: 24px;
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 24px;
+  gap: 12px;
+  max-width: 100%;
+  min-width: 300px;
 }
 
 .imageContainer {
   width: 300px;
-  z-index: -1;
   height: 200px;
   position: relative;
   z-index: -1;
@@ -39,6 +40,12 @@
   width: 100%;
 }
 
+.titleDesc {
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+}
+
 .date {
   font-size: 0.75rem;
   font-weight: bold;
@@ -47,7 +54,6 @@
 
 .category {
   font-weight: bold;
-  z-index: 300;
   text-transform: uppercase;
   font-size: 0.75rem;
   color: var(--softTextColor);
@@ -62,6 +68,7 @@
 @media screen and (max-width: 640px) {
   .container {
     flex-direction: column;
+    gap: 12px;
   }
 
   .imageContainer {
