--- a/src/app/components/CardList/cardList.module.css
+++ b/src/app/components/CardList/cardList.module.css
@@ -1,7 +1,10 @@
-.container{
-   flex: 5;
- }
- 
- .title{
-   margin: 50px 0px;
- }
+.container {
+  flex: 5;
+}
+
+.title {
+  margin-top: 32px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: bold;
+}
