--- a/src/app/components/Footer/footer.module.css
+++ b/src/app/components/Footer/footer.module.css
@@ -2,7 +2,7 @@
   margin-top: 50px;
   padding: 20px 0px;
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
   color: var(--TextColor);
 }
