--- a/src/app/components/authLinks/authLinks.module.css
+++ b/src/app/components/authLinks/authLinks.module.css
@@ -4,6 +4,8 @@
 }
 
 .burger {
+  position: relative;
+  z-index: 1000;
   width: 20px;
   height: 16px;
   flex-direction: column;
@@ -53,7 +55,7 @@
 
   .responsiveMenu {
     position: fixed;
-    top: 100px;
+    top: 0;
     left: 0;
     right: 0;
     background-color: var(--bg) !important;
@@ -63,8 +65,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
-    font-size: 36px;
-    z-index: 100000000000 !important;
+    gap: 36px;
+    font-size: 24px;
+  }
+
+  .openBurger {
+    position: absolute;
+    top: 50px;
+    right: 40px;
   }
 }
