--- a/src/app/components/Post/postPage.module.css
+++ b/src/app/components/Post/postPage.module.css
@@ -3,17 +3,18 @@
 }
 
 .container {
-  margin-bottom: 50px;
+  margin-bottom: 24px;
   display: flex;
-  width: 100%;
   align-items: center;
   flex-direction: row;
-  gap: 24px;
+  gap: 12px;
+  max-width: 100%;
+  min-width: 300px;
 }
 
 .imageContainer {
   width: 300px;
-  height: 170px;
+  height: 200px;
   position: relative;
   z-index: -1;
 }
@@ -32,6 +33,13 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  width: 100%;
+}
+
+.titleDesc {
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
 }
 
 .date {
@@ -42,7 +50,6 @@
 
 .category {
   font-weight: bold;
-  z-index: 300;
   text-transform: uppercase;
   font-size: 0.75rem;
   color: var(--softTextColor);
@@ -50,13 +57,14 @@
 
 .desc {
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
   color: var(--softTextColor);
 }
 
 @media screen and (max-width: 425px) {
   .container {
     flex-direction: column;
+    gap: 12px;
   }
 
   .imageContainer {
