--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -7,11 +7,11 @@
 }
 
 .container {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 12px;
+  gap: 20px;
   max-width: 100%;
   min-width: 300px;
 }
@@ -36,13 +36,13 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
   width: 100%;
 }
 
 .titleDesc {
   display: flex;
-  gap: 4px;
+  gap: 8px;
   flex-direction: column;
 }
 
@@ -63,6 +63,11 @@
   font-size: 1rem;
   font-weight: 400;
   color: var(--softTextColor);
+}
+
+.detail {
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 640px) {
