--- a/src/app/components/Post/postPage.module.css
+++ b/src/app/components/Post/postPage.module.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 12px;
+  gap: 20px;
   max-width: 100%;
   min-width: 300px;
 }
@@ -32,13 +32,13 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
   width: 100%;
 }
 
 .titleDesc {
   display: flex;
-  gap: 4px;
+  gap: 8px;
   flex-direction: column;
 }
 
@@ -59,6 +59,11 @@
   font-size: 1rem;
   font-weight: 400;
   color: var(--softTextColor);
+}
+
+.detail {
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 425px) {
