--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -105,6 +105,14 @@
   padding-left: 20px;
 }
 
+.description iframe {
+  width: 100%;
+  height: 300px;
+  min-height: 100px;
+  margin-top: 20px;
+  margin-bottom: -60px;
+}
+
 @media screen and (max-width: 1536px) {
   .title {
     font-size: 30px;
