--- a/src/app/write/writePage.module.css
+++ b/src/app/write/writePage.module.css
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   z-index: 100;
+  width: 50rem;
+  left: 50%;
+  translate: -50%;
 }
 
 .category-wrapper {
@@ -62,8 +65,7 @@
 
 .input {
   padding: 30px;
-  margin-bottom: 20px;
-  font-size: 64px;
+  font-size: 24px;
   border: none;
   outline: none;
   width: 100% !important;
@@ -81,16 +83,20 @@
   width: 100%;
 }
 
+.headerContainer {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 20px;
+}
+
 .publish {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  padding: 10px 20px;
+  height: fit-content;
+  padding: 12px 16px;
   border: none;
   background-color: #1a8917;
   color: white;
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 6px;
 }
 
 .preview {
@@ -101,4 +107,15 @@
   border: solid 2px var(--textColor);
   border-radius: 4px;
   display: inline-flex;
+}
+
+.textArea {
+  margin: 1rem auto;
+  max-width: 100%;
+}
+
+.progress {
+  width: 100%;
+  animation-timing-function: ease-in;
+  margin-bottom: 12px;
 }
