--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -65,6 +65,12 @@
   color: var(--softTextColor);
 }
 
+.desc h2 {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--softTextColor);
+}
+
 .detail {
   display: flex;
   justify-content: space-between;
