Fixing Layout for About Us & Our Content AND Sorting catSlug, also adding Folls Insight on responsive navbar

--- a/src/app/components/ContentItem/contentItem.module.css
+++ b/src/app/components/ContentItem/contentItem.module.css
@@ -12,8 +12,12 @@
 
 .img {
   border-radius: 11px;
-  width: 160px;
-  height: 238px;
+  width: 288px;
+  height: 433px;
+}
+
+.contenttitle {
+  font-size: 40px;
 }
 
 .text-content {
