--- a/src/app/about-us/aboutUsPage.module.css
+++ b/src/app/about-us/aboutUsPage.module.css
@@ -6,8 +6,27 @@
   text-transform: capitalize;
 }
 
+.header {
+  font-size: 4rem;
+}
+
+.subtitle {
+  font-size: 2rem;
+}
+
 .container {
   text-align: center;
+}
+
+.paragraph {
+  font-size: 1.5rem;
+  max-width: 90rem;
+}
+
+.cok {
+  margin-top: 25px;
+  font-size: 2rem;
+  font-weight: 500;
 }
 
 .hero-container {
@@ -16,7 +35,7 @@
   justify-content: center;
   width: 100%;
   height: 510px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .bg-cover {
@@ -24,7 +43,6 @@
   top: -1px;
   left: -1px;
   z-index: -1;
-
   width: 100%;
   height: 590px;
   background: var(--linear-gradient), url("/mahakam.png");
@@ -43,6 +61,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 28px;
+  gap: 25px;
   margin-bottom: 32px;
+}
+
+.content_2 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+  margin: 60px;
 }
