--- a/src/app/write/writePage.module.css
+++ b/src/app/write/writePage.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   z-index: 100;
   width: 50rem;
+  margin-top: 20px;
   left: 50%;
   translate: -50%;
 }
@@ -57,7 +58,6 @@
 
 .add {
   display: flex;
-  align-items: center;
   gap: 20px;
   background-color: var(--bg);
   width: 100%;
@@ -118,4 +118,25 @@
   width: 100%;
   animation-timing-function: ease-in;
   margin-bottom: 12px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 40rem;
+  }
+
+  .add {
+    flex-direction: column;
+    align-items: left;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .container {
+    width: 20rem;
+  }
+
+  .add {
+    align-items: left;
+  }
 }
