--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -60,7 +60,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1302px) {
   .logo {
     font-size: 32px;
   }
@@ -98,7 +98,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
   .links {
     justify-content: flex-end;
     flex: 0;
@@ -107,6 +107,12 @@
     display: none;
   }
   .link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1540px) {
+  .social {
     display: none;
   }
 }
