--- a/src/app/write/writePage.module.css
+++ b/src/app/write/writePage.module.css
@@ -73,6 +73,8 @@
   color: var(--textColor);
   overflow: hidden;
   resize: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
 
 .input::placeholder {
