--- a/src/app/components/Ads/postDown/postDown.module.css
+++ b/src/app/components/Ads/postDown/postDown.module.css
@@ -1,66 +1,71 @@
 .items {
-    margin-bottom: 32px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 100%;
-  }
-  
-  .item {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    flex-direction: column;
-  }
-  
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.imageContainer {
+  flex: 1;
+  aspect-ratio: 36/4;
+  position: relative;
+  z-index: -1;
+}
+
+.title {
+  font-size: 1.25rem;
+}
+
+.image {
+  object-fit: cover;
+}
+
+.item:hover .image {
+  filter: none;
+}
+
+.textContainer {
+  width: 100%;
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.category {
+  padding: 3px 8px;
+  border-radius: 10px;
+  font-size: 12px;
+  color: white;
+  width: max-content;
+  color: var(--bg);
+}
+
+.postTitle {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--softTextColor);
+}
+
+.detail {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.date {
+  color: gray;
+}
+
+@media screen and (max-width: 640px) {
   .imageContainer {
-    flex: 1;
-    aspect-ratio: auto 36/4;
-    position: relative;
-    z-index: -1;
+    aspect-ratio: 36/8;
   }
-  
-  .title {
-    font-size: 1.25rem;
-  }
-  
-  .image {
-    object-fit: cover;
-  }
-  
-  .item:hover .image {
-    filter: none;
-  }
-  
-  .textContainer {
-    width: 100%;
-    flex: 4;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  
-  .category {
-    padding: 3px 8px;
-    border-radius: 10px;
-    font-size: 12px;
-    color: white;
-    width: max-content;
-    color: var(--bg);
-  }
-  
-  .postTitle {
-    font-size: 18px;
-    font-weight: 500;
-    color: var(--softTextColor);
-  }
-  
-  .detail {
-    font-size: 12px;
-    text-transform: uppercase;
-  }
-  
-  .date {
-    color: gray;
-  }
-  
+}
