--- a/src/app/components/MainHeader/mainHeader.module.css
+++ b/src/app/components/MainHeader/mainHeader.module.css
@@ -12,11 +12,19 @@
 
 .header {
   width: 65%; /* Atur lebar sesuai kebutuhan Anda */
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .header::first-letter {
   text-transform: capitalize;
+}
+
+.link::after,
+.link::before {
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-app-region: no-drag;
+  cursor: pointer;
 }
 
 .backgroundImage {
@@ -30,7 +38,7 @@
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 0;
   left: 0;
@@ -45,7 +53,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Warna hitam dengan opacity 50% */
+  background-color: rgba(0, 0, 0, 0.75); /* Warna hitam dengan opacity 50% */
   z-index: -1;
 }
 
@@ -53,35 +61,52 @@
   position: relative;
   z-index: 2; /* Z-index ditingkatkan untuk menampilkan konten di depan overlay hitam */
   color: white; /* Atur warna teks sesuai kebutuhan Anda */
-  padding: 70px;
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  padding: 0 4rem;
+}
+
+.date {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: rgb(220, 220, 220);
 }
 
 /* Responsif pada layar dengan lebar 768px atau lebih kecil */
-@media (max-width: 768px) {
-  .header {
-    /* width: 75%; */
-    font-size: 2rem;
-  }
-  .content {
-    padding: 2rem;
-    padding-top: 4rem;
-  }
-}
-
 @media (max-width: 1024px) {
   .header {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    width: 75%;
+  }
+
+  /* .content {
+  padding: 0 4rem;
+  } */
+}
+
+@media (max-width: 768px) {
+  .header {
+    font-size: 1.5rem;
+    width: 80%;
+  }
+
+  .content {
+    padding: 0 2rem;
   }
 }
 
 /* Responsif pada layar dengan lebar 576px atau lebih kecil */
 @media (max-width: 576px) {
   .header {
-    font-size: 1.25rem;
+    width: 100%;
+    font-size: 1.05rem;
   }
+
   .content {
-    padding: 1rem;
-    padding-top: 3rem;
+    padding: 0 1rem;
   }
 
   .container {
