--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,9 +54,9 @@ a {
 }
 
 .wrapper {
-  max-width: 1366px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 1440px;
+  margin: auto;
+  padding: 0 80px;
 }
 
 @media screen and (max-width: 1440px) {
@@ -66,28 +66,26 @@ a {
   }
 }
 
-@media screen and (max-width: 1280px) {
+/* @media screen and (max-width: 1280px) {
   .wrapper {
-    max-width: 1024px;
+    
   }
-}
+} */
 
 @media screen and (max-width: 1024px) {
   .wrapper {
-    max-width: 768px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 0 64px;
   }
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .wrapper {
-    max-width: 640px;
+
   }
-}
+} */
 
 @media screen and (max-width: 640px) {
   .wrapper {
-    max-width: 475px;
+    padding: 0 32px;
   }
 }
