--- a/src/app/about-us/aboutUsPage.module.css
+++ b/src/app/about-us/aboutUsPage.module.css
@@ -73,3 +73,12 @@
   gap: 25px;
   margin: 60px;
 }
+
+@media screen and (max-width: 640px) {
+  .header {
+    font-size: 3rem;
+  }
+  .paragraph {
+    font-size: 1rem;
+  }
+}
